--- a/style.css
+++ b/style.css
@@ -63,3 +63,13 @@ body {
     
 
 }
+body{
+    display: flex;
+}
+.box{
+    display:inline-block;
+    justify-content:space-between;
+    padding: 20px;
+    margin: 20px;
+    background-color: #854545;
+}
